# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[package]
name = "http-server-starter-rust"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"

# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[dependencies]
anyhow = "1.0.86"                                   # error handling
bytes = "1.6.0"                                     # helps manage buffers
thiserror = "1.0.61"                                # error handling
tokio = { version = "1.38.0", features = ["full"] } # async networking
nom = "7.1.3"                                       # parser combinators
itertools = "0.13.0"                                # General iterator helpers

once_cell = "1.19.0"
clap = { version = "4.5.7", features = ["derive"] }
tokio-util = { version = "0.7.11", features = ["io"] }
futures-util = "0.3.30"
http = "1.1.0"
http-body = "1.0.0"
http-body-util = "0.1.2"
flate2 = "1.0.30"
bstr = { version = "1.9.1", default-features = false }

[dev-dependencies]
pretty_assertions = "1.4.0"                         # nicer looking assertions
